--- a/services1.html
+++ b/services1.html
@@ -353,7 +353,7 @@
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../Client_project/assets/img/home/service1.jpg") top center no-repeat;
+  background: url("assets/img/home/service1.jpg") top center no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 82px;
